Related: tdf#92776 set parent style of notebook to toplevel window style

Change-Id: Iec16b2617c82c363a540f967f66c514b5b2b104b